// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  className="sc-AxhUy fGtUnB"
>
  <img
    alt=""
    className="sc-AxhCb ebRoil"
    src="#image"
  />
  <h1
    className="sc-AxirZ lnkEKo"
  >
    Custom title
  </h1>
  
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  className="sc-AxhUy fGtUnB"
>
  <img
    alt="Image alt"
    className="sc-AxhCb ebRoil"
    src="#image"
  />
  <h1
    className="sc-AxirZ lnkEKo"
  >
    Custom title
  </h1>
  <div
    className="sc-AxjAm bsGvJV"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      Custom text
    </p>
  </div>
</div>
`;
